--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         {
             "name": "yu zhiqiang",
             "email": "yzqiang6@sina.com",
-            "homepage": "http://smccb.tk:808",
+            "homepage": "http://smccb.cf",
             "role": "Developer"
         }
     ],
